--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://derekangziying.github.io/create-react-app-github-pages/"
+  "homepage":"https://derekangziying.github.io/create-react-app-github-pages/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
